Move framebuffer declaration to shared folder

--- a/macos/CMakeLists.txt
+++ b/macos/CMakeLists.txt
@@ -16,8 +16,7 @@ set(SOURCES
     AppDelegate.h AppDelegate.m
     MetalRenderer.h MetalRenderer.m
     MetalShaders.metal
-    framebuffer.h
-    framebuffer.m
+    ../shared/framebuffer.h
 )
 
 add_executable(${PROJECT_NAME} ${SOURCES})
